snapshots/stoat/tui/stoat__test_harness__add_selection_below.snap
---
source: stoat/src/test_harness.rs
assertion_line: 316
expression: text
---
actions: C
focused: #1 of 1
mode: normal
size: 20x5
---
[0m[7m[97ma[0m[97mbcd[0m
[0m[7m[97me[0m[97mfgh[0m
[0m[97mijkl[0m

[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m/tes[0m
