snapshots/stoat/tui/stoat__test_harness__badge_complete.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: normal
size: 40x10
---
[0m[7m [0m               [0m[32m╭──────╮[0m
                [0m[32m│[0m[97mclaude[0m[32m│[0m
                [0m[32m╰──────╯[0m






[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]           1:1 [0m
