snapshots/stoat/tui/stoat__test_harness__chat_replay_narrow_pane_wrap_step_01_text.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: prompt
size: 40x16
---
[0m[90mClaude[0m










[0m[97mWorking on it. This reply should wrap[0m
[0m[97mseveral times in a 40-col pane.[0m
[0m[90m----------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[42m PMT [0m[1m[97m[100m (unnamed) [0m[97m[100m[claude]                [0m
