snapshots/stoat/tui/stoat__test_harness__chat_replay_real_session_ls_repo_step_02_turn1_result.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: claude_message
focused: #1 of 1
mode: prompt
size: 80x24
---
[0m[90mClaude[0m
















[0m[97mWorking.[0m

[0m[90m--------------------------------------------------------------------------------[0m
[0m[37m  1.8s[0m
[0m[90m--------------------------------------------------------------------------------[0m
[0m[7m [0m
[0m[1m[30m[42m PMT [0m[1m[97m[100m (unnamed) [0m[97m[100m[claude]                                                        [0m
